# Airbnb-House-Price-Prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  heroku.yml  main.py  pyproject.toml  requirements.txt  template.py
api/: main.py
artifacts/: feature_names.json
config/: config.yaml
notebooks/: eda.ipynb  training.ipynb
src/airbnb/: __init__.py  config.py  data.py  predict.py  train.py  utils.py
tests/: test_data.py  test_train.py
web/: Dockerfile  package-lock.json  package.json  tailwind.config.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: PredictionForm.tsx  ResultCard.tsx
web/src/lib/: api.ts
web/src/types/: index.ts
